<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="yes">"Yes"</string>
    <string name="no">"No"</string>
    <string name="device_info_default">Unknown</string>
    <string name="turn_on_radio">Turn on radio</string>
    <string name="turn_off_radio">Turn off radio</string>
    <string name="turn_on_qxdm">Enable QXDM SD log</string>
    <string name="turn_off_qxdm">Disable QXDM SD log</string>
    <string name="radioInfo_menu_viewADN">View SIM address book</string>
    <string name="radioInfo_menu_viewFDN">View Fixed Dialing Numbers</string>
    <string name="radioInfo_menu_viewSDN">View Service Dialing Numbers</string>
    <string name="radioInfo_menu_getPDP">Get PDP list</string>
    <string name="radioInfo_menu_enableData">Enable data connection</string>
    <string name="radioInfo_menu_disableData">Disable data connection</string>
    <string name="radioInfo_menu_enableDataOnBoot">Enable data on boot</string>
    <string name="radioInfo_menu_disableDataOnBoot">Disable data on boot</string>
    <string name="radioInfo_service_in">In service</string>
    <string name="radioInfo_service_out">Out of service</string>
    <string name="radioInfo_service_emergency">Emergency calls only</string>
    <string name="radioInfo_service_off">Radio off</string>
    <string name="radioInfo_roaming_in">Roaming</string>
    <string name="radioInfo_roaming_not">Not roaming</string>
    <string name="radioInfo_phone_idle">Idle</string>
    <string name="radioInfo_phone_ringing">Ringing</string>
    <string name="radioInfo_phone_offhook">Call in progress</string>
    <string name="radioInfo_data_disconnected">Disconnected</string>
    <string name="radioInfo_data_connecting">Connecting</string>
    <string name="radioInfo_data_connected">Connected</string>
    <string name="radioInfo_data_suspended">Suspended</string>
    <string name="radioInfo_unknown">unknown</string>
    <string name="radioInfo_display_packets">pkts</string>
    <string name="radioInfo_display_bytes">bytes</string>
    <string name="radioInfo_display_dbm">dBm</string>
    <string name="radioInfo_display_asu">asu</string>
    <string name="radioInfo_lac">LAC</string>
    <string name="radioInfo_cid">CID</string>
    <string name="sdcard_unmount">Unmount SD card</string>
    <string name="sdcard_format">Format SD card</string>
    <string name="small_font">Small</string>
    <string name="medium_font">Medium</string>
    <string name="large_font">Large</string>
    <string name="font_size_preview_text">Servez à ce monsieur une bière et des kiwis.</string>
    <string name="font_size_save">OK</string>
    <string name="sdcard_setting">SD card</string>
    <string name="battery_info_status_label">Battery status:</string>
    <string name="battery_info_power_label">Power plug:</string>
    <string name="battery_info_scale_label">Battery scale:</string>
    <string name="battery_info_level_label">Battery level:</string>
    <string name="battery_info_health_label">Battery health:</string>
    <string name="battery_info_technology_label">Battery technology:</string>
    <string name="battery_info_voltage_label">Battery voltage:</string>
    <string name="battery_info_voltage_units">mV</string>
    <string name="battery_info_temperature_label">Battery temperature:</string>
    <string name="battery_info_temperature_units">\u00B0 C</string>
    <string name="battery_info_uptime">Time since boot:</string>
    <string name="battery_info_awake_battery">Awake time on battery:</string>
    <string name="battery_info_awake_plugged">Awake time when charging:</string>
    <string name="battery_info_screen_on">Screen ON time:</string>
    <string name="battery_info_status_unknown">Unknown</string>
    <string name="battery_info_status_charging">Charging</string>
    <string name="battery_info_status_charging_ac">(AC)</string>
    <string name="battery_info_status_charging_usb">(USB)</string>
    <string name="battery_info_status_discharging">Discharging</string>
    <string name="battery_info_status_not_charging">Not charging</string>
    <string name="battery_info_status_full">Full</string>
    <string name="battery_info_power_unplugged">Unplugged</string>
    <string name="battery_info_power_ac">AC</string>
    <string name="battery_info_power_usb">USB</string>
    <string name="battery_info_power_ac_usb">AC+USB</string>
    <string name="battery_info_power_unknown">Unknown</string>
    <string name="battery_info_health_unknown">Unknown</string>
    <string name="battery_info_health_good">Good</string>
    <string name="battery_info_health_overheat">Overheat</string>
    <string name="battery_info_health_dead">Dead</string>
    <string name="battery_info_health_over_voltage">Over voltage</string>
    <string name="battery_info_health_unspecified_failure">Unknown error</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="bluetooth_visibility">Discoverable</string>
    <string name="bluetooth_is_discoverable">Discoverable for <xliff:g id="discoverable_time_period">%1$s</xliff:g> seconds\u2026</string>
    <string name="bluetooth_not_discoverable">Make device discoverable</string>
    <string name="bluetooth_devices">Bluetooth devices</string>
    <string name="bluetooth_device_name">Device name</string>
    <string name="bluetooth_name_not_set">No name set, using account name</string>
    <string name="bluetooth_scan_for_devices">Scan for devices</string>
    <string name="bluetooth_disconnect_blank"><xliff:g id="device_name">%1$s</xliff:g> will be disconnected.</string>
    <string name="bluetooth_connected">Connected</string>
    <string name="bluetooth_disconnected">Disconnected</string>
    <string name="bluetooth_disconnecting">Disconnecting\u2026</string>
    <string name="bluetooth_connecting">Connecting\u2026</string>
    <string name="bluetooth_unknown"></string>
    <string name="bluetooth_not_connected">Pair with this device</string>
    <string name="bluetooth_pairing">Pairing\u2026</string>
    <string name="bluetooth_paired">Paired but not connected</string>
    <string name="bluetooth_device">handsfree/headset</string>
    <string name="progress_scanning">Scanning</string>
    <string name="bluetooth_notif_ticker">Bluetooth pairing request</string>
    <string name="bluetooth_notif_title">Pairing request</string>
    <string name="bluetooth_notif_message">Select to pair with\u0020</string>
    <string name="device_picker">Bluetooth device picker</string>
    <string name="bluetooth_permission_request">"Bluetooth permission request"</string>
    <string name="bluetooth_ask_enablement">"An application on your phone is requesting permission to turn on Bluetooth. Do you want to do this?"</string>
    <string name="bluetooth_ask_discovery">"An application on your phone is requesting permission to make your phone discoverable by other Bluetooth devices for <xliff:g id="timeout">%1$d</xliff:g> seconds. Do you want to do this?"</string>
    <string name="bluetooth_ask_enablement_and_discovery">"An application on your phone is requesting permission to turn on Bluetooth and to make your phone discoverable by other devices for <xliff:g id="timeout">%1$d</xliff:g> seconds. Do you want to do this?"</string>
    <string name="bluetooth_turning_on">"Turning on Bluetooth\u2026"</string>
    <string name="bluetooth_scan_text">Empty button\u2026</string>
    <string name="bluetooth_settings_text">Empty button\u2026</string>
    <string name="bluetooth_enable_text">Empty button\u2026</string>
    <string name="bluetooth_device_info_connectButton_text">Turn on Bluetooth</string>
    <string name="bluetooth_device_info_deviceInfo_text"></string>
    <string name="date_and_time">Date &amp; time settings</string>
    <string name="date_time_12_hour_sample">1:00 pm</string>
    <string name="date_time_24_hour_sample">13:00</string>
    <string name="date_time_changeTime_text">Change time</string>
    <string name="date_time_changeDate_text">Date</string>
    <string name="choose_timezone">Select time zone</string>
    <string name="default_date_format"><xliff:g id="default_date_format">MM/dd/yyyy</xliff:g></string>
    <string name="normal_date_format">Normal (<xliff:g id="date" example="12-31-2009">%s</xliff:g>)</string>
    <string name="display_preview_label">Preview:</string>
    <string name="display_font_size_label">Font size:</string>
    <string name="intent_sender_data_label"><xliff:g id="data">Data:</xliff:g></string>
    <string name="intent_sender_sendbroadcast_text">Send <xliff:g id="broadcast">broadcast</xliff:g></string>
    <string name="intent_sender_action_label"><xliff:g id="action">Action</xliff:g>:</string>
    <string name="intent_sender_startactivity_text">Start <xliff:g id="activity">activity</xliff:g></string>
    <string name="intent_sender_resource_label"><xliff:g id="resource">Resource</xliff:g>: </string>
    <string name="intent_sender_account_label">Account: </string>
    <string name="proxy_clear_text">Clear</string>
    <string name="proxy_port_label">Port</string>
    <string name="proxy_defaultView_text">Restore defaults</string>
    <string name="proxy_action_text">Save</string>
    <string name="proxy_hostname_label">Hostname</string>
    <string name="proxy_error">Attention</string>
    <string name="proxy_error_dismiss">OK</string>
    <string name="proxy_error_invalid_host">The hostname you typed is not valid.</string>
    <string name="proxy_error_empty_port">You must complete the port field.</string>
    <string name="proxy_error_empty_host_set_port">The port field must be empty if the host field is empty.</string>
    <string name="proxy_error_invalid_port">The port you typed is not valid.</string>
    <string name="radio_info_signal_location_label">Location:</string>
    <string name="radio_info_neighboring_location_label">Neighboring CID:</string>
    <string name="radio_info_data_attempts_label">Data attempts:</string>
    <string name="radio_info_gprs_service_label">GPRS service:</string>
    <string name="radio_info_roaming_label">Roaming:</string>
    <string name="radio_info_imei_label">IMEI:</string>
    <string name="enforce_shadow_imei">IMEI:</string>
    <string name="enforce_summary_imei">Provide a hashed IMEI insead of the unique device number</string>
    <string name="enforce_shadow_phonenumber">Phonenumber:</string>
    <string name="enforce_summary_phonenumber">Provide a fake phone number</string>
    <string name="enforce_shadow_location">Location:</string>
    <string name="enforce_summary_location">Provide fake location data</string>
    <string name="enforce_shadow_camera">Camera:</string>
    <string name="enforce_summary_camera">Provide an empty file when app is accessing a photo from the camera</string>
    <string name="enforce_shadow_microphone">Mic:</string>
    <string name="enforce_summary_microphone">Provide an empty file when app is accessing an audio file from the microphone</string>
    <string name="enforce_shadow_contacts">Contacts:</string>
    <string name="enforce_summary_contacts">Work as if contacts book is empty</string>
    <string name="enforce_shadow_sms">SMS/MMS:</string>
    <string name="enforce_summary_sms">Work as if there is no SMS/MMS message</string>
    <string name="enforce_shadow_history">History/Bookmark:</string>
    <string name="enforce_summary_history">Work as if browser history/bookmarks are empty</string>
    <string name="enforce_shadow_calendar">Calendar:</string>
    <string name="enforce_summary_calendar">Work as if calendar is empty</string>
    <string name="enforce_shadow_feeds">Subscribed Feeds:</string>
    <string name="enforce_summary_feeds">Work as if there is no subscribed feed</string>
    <string name="enforce_shadow_logs">Logs:</string>
    <string name="enforce_summary_logs">Work as if there is no log</string>
    <string name="enforce_shadow_account">Account:</string>
    <string name="enforce_summary_account">Work as if there is no such account</string>
</resources>